--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,195 +1,216 @@
-                     @font-face {
-                         font-family: "Source Sans Pro";
-                         src: url(../fonts/SourceSansPro-Light.ttf);
-                     }
-                     
-                     * {
-                         margin: 0;
-                         padding: 0;
-                         box-sizing: border-bo;
-                         list-style-type: none;
-                         outline: none;
-                     }
-                     
-                     h1 {
-                         font-size: 3.4rem;
-                         font-weight: 200;
-                     }
-                     
-                     h2 {
-                         font-size: 2.5rem;
-                         font-weight: 500;
-                         letter-spacing: -1px;
-                     }
-                     
-                     a,
-                     a:visited {
-                         color: black;
-                         text-decoration: none;
-                     }
-                     
-                     p {
-                         line-height: 36px;
-                     }
-                     
-                     .button {
-                         border: 1px solid#ccc;
-                         background-color: transparent;
-                         border-radius: 50px;
-                         padding: 13px 30px;
-                         display: inline-block;
-                         text-transform: uppercase;
-                         letter-spacing: 2px;
-                         cursor: pointer;
-                         font: 7000 "Source sans prop";
-                         transition: 0.3s;
-                         margin: 13px auto;
-                         padding: 0;
-                     }
-                     
-                     .button:hover,
-                     .footer a hover {
-                         border: 1px solid skyblue;
-                         color: skyblue;
-                     }
-                     
-                     .container {
-                         display: flex;
-                         justify-content: center;
-                         align-items: center;
-                         padding: 55px;
-                         margin-right: 0;
-                     }
-                     /*******************BODY*********************/
-                     
-                     body {
-                         font-family: "Source Sans Pro", sans-serif;
-                         margin: 0;
-                         padding: 0;
-                     }
-                     
-                     header {
-                         min-height: 100vh;
-                         display: grid;
-                         grid-template-columns: 50% 50%;
-                     }
-                     
-                     .img-banner {
-                         background: url(../img/banner.jpg) center/cover;
-                     }
-                     /*******************SECTION1*********************/
-                     
-                     .section-1 {
-                         min-height: 400px;
-                         display: grid;
-                         grid-template-columns: 32% 68%;
-                     }
-                     
-                     .img-left {
-                         background: url(../img/img-left.jpg) center/cover;
-                     }
-                     
-                     .section-1,
-                     .section-2,
-                     .contact {
-                         box-shadow: inset 0 1px 0 #a7a6a656;
-                     }
-                     /*******************SECTION1*********************/
-                     
-                     .section-2 {
-                         min-height: 400px;
-                         display: grid;
-                         grid-template-columns: 65% 35%;
-                     }
-                     
-                     .img-right {
-                         background: url(../img/img-right.jpg) center/cover;
-                     }
-                     /********************** CONTACT********************/
-                     
-                     .contact {
-                         text-align: center;
-                         padding: 60px 0;
-                     }
-                     
-                     .form-grid {
-                         display: grid;
-                         grid-template-columns: 50% 50%;
-                         grid-template-rows: 100px 224px;
-                         grid-template-areas: "input1 input2" "textarea textarea";
-                         gap: 10px;
-                         width: 85%;
-                         margin: 30px auto;
-                         max-width: 600px;
-                     }
-                     
-                     .textarea {
-                         grid-area: textarea;
-                     }
-                     
-                     Label {
-                         font-weight: 600;
-                         font-size: 0.8rem;
-                         letter-spacing: 1px;
-                     }
-                     
-                     input[type="text"],
-                     textarea {
-                         width: 100%;
-                         margin: 20px 0 40px;
-                         border-radius: 4px;
-                         padding: 10px;
-                         transition: 0.2s;
-                         border: 1px solid #ccc;
-                     }
-                     
-                     input[type="text"]:focus,
-                     textarea:focus {
-                         border: 1px solid skyblue;
-                     }
-                     /* #email { 
-                             
-                             margin-left: 15px;
-                     }*/
-                     
-                     * textarea {
-                         resize: none;
-                         height: 180px;
-                     }
-                     /************************* FOOTER *************************/
-                     
-                     footer {
-                         padding: 70px 0 90px;
-                         position: relative;
-                     }
-                     
-                     footer:before {
-                         content: "";
-                         position: absolute;
-                         width: 90%;
-                         height: 1px;
-                         background: rgba(0, 0, 0, 0.082);
-                         left: 50%;
-                         transform: translateX(-50%);
-                         top: 0;
-                     }
-                     
-                     footer ul {
-                         display: flex;
-                         justify-content: space-between;
-                         width: 33%;
-                         min-width: 300px;
-                         margin: 0 auto;
-                     }
-                     
-                     footer a {
-                         border: 1px solid#ccc;
-                         border-radius: 50px;
-                         width: 44px;
-                         height: 44px;
-                         display: inline-block;
-                         display: flex;
-                         justify-content: center;
-                         align-items: center;
-                         transition: 0.3s;
-                     }
+@font-face {
+    font-family: "Source Sans Pro";
+    src: url(../fonts/SourceSansPro-Light.ttf);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-bo;
+    list-style-type: none;
+    outline: none;
+}
+
+h1 {
+    font-size: 3.4rem;
+    font-weight: 200;
+}
+
+h2 {
+    font-size: 2.5rem;
+    font-weight: 500;
+    letter-spacing: -1px;
+}
+
+a,
+a:visited {
+    color: black;
+    text-decoration: none;
+}
+
+p {
+    line-height: 36px;
+}
+
+.button {
+    border: 1px solid#ccc;
+    background-color: transparent;
+    border-radius: 50px;
+    padding: 13px 30px;
+    display: inline-block;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    cursor: pointer;
+    font: 7000 "Source sans prop";
+    transition: 0.3s;
+    margin: 33px auto;
+}
+
+.button:hover,
+.footer a hover {
+    border: 1px solid skyblue;
+    color: skyblue;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 55px;
+    margin-right: 0;
+}
+
+
+/*******************BODY*********************/
+
+body {
+    font-family: "Source Sans Pro", sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.img-banner {
+    background: url(../img/banner.jpg) center/cover;
+}
+
+
+/*******************SECTION1*********************/
+
+.section-1 {
+    min-height: 400px;
+    display: grid;
+    grid-template-columns: 32% 68%;
+}
+
+.img-left {
+    background: url(../img/img-left.jpg) center/cover;
+}
+
+.section-1,
+.section-2,
+.contact {
+    box-shadow: inset 0 1px 0 #a7a6a656;
+}
+
+
+/*******************SECTION1*********************/
+
+.section-2 {
+    min-height: 400px;
+    display: grid;
+    grid-template-columns: 65% 35%;
+}
+
+.img-right {
+    background: url(../img/img-right.jpg) center/cover;
+}
+
+
+/********************** CONTACT********************/
+
+.contact {
+    text-align: center;
+    padding: 60px 10px;
+}
+
+.form-grid {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100px 224px;
+    grid-template-rows: 100px 224px;
+    grid-template-areas: "input1 input2" "textarea textarea" "envoyer envoyer";
+    gap: 10px;
+    width: 85%;
+    margin: 30px auto;
+    max-width: 600px;
+}
+
+.textarea {
+    grid-area: textarea;
+}
+
+#envoyer {
+    grid-area: envoyer;
+}
+
+Label {
+    font-weight: 600;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+}
+
+input[type="text"],
+textarea {
+    width: 100%;
+    margin: 20px 0 40px;
+    border-radius: 4px;
+    padding: 10px;
+    border: 1px solid #ccc;
+}
+
+input,
+#email {
+    margin-left: 30px;
+    width: 83%;
+}
+
+input,
+#name {
+    margin-right: 30px;
+    width: 90%;
+}
+
+input[type="text"]:focus,
+textarea:focus {
+    border: 1px solid skyblue;
+}
+
+* textarea {
+    resize: none;
+    height: 180px;
+}
+
+
+/************************* FOOTER *************************/
+
+footer {
+    padding: 70px 0 90px;
+    position: relative;
+}
+
+footer:before {
+    content: "";
+    position: absolute;
+    width: 90%;
+    height: 1px;
+    background: rgba(0, 0, 0, 0.082);
+    left: 50%;
+    transform: translateX(-50%);
+    top: 0;
+}
+
+footer ul {
+    display: flex;
+    justify-content: space-between;
+    width: 33%;
+    min-width: 300px;
+    margin: 0 auto;
+}
+
+footer a {
+    border: 1px solid#ccc;
+    border-radius: 50px;
+    width: 44px;
+    height: 44px;
+    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.3s;
+}
